# DeathMatch

./: CMakeLists.txt
cmake/: CopyDlls.cmake  FindSDL2.cmake
src/: main.cpp
